[package]
name = "notif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
zbus = {version = "3.11", default-features = false, features = ["tokio"]}
zvariant = "3.12"
zvariant_derive = "3.12"

rusqlite = "0.28"
